<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="start|center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start|center"
            android:text="@string/format_internal"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/internal_delete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/delete"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/format_external"
            android:textColor="@color/gray"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/external_format"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/format"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>