<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="2dp">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/downDelete"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/black_transparent_light">
            <TextView
                android:id="@+id/download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/download"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/downDelete"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/photo"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true" />
</RelativeLayout>